started defining functions

--- a/workspace/rocket_project.ipynb
+++ b/workspace/rocket_project.ipynb
@@ -55,6 +55,61 @@
     "t0 = 0 # intial time\n",
     "z0 = 0 # intial altitude \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define functions for mass propellent and mass flow rate of propellent\n",
+    "\n",
+    "def mp(t):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    -------------\n",
+    "\n",
+    "    t : array of float\n",
+    "        given time\n",
+    "\n",
+    "    Returns\n",
+    "    -------------\n",
+    "\n",
+    "    mp : float \n",
+    "        total mass of mass propelent at time t \n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "        if t<=5:\n",
+    "            mp = 100-20t\n",
+    "        else\n",
+    "            mp = 0 \n",
+    "    \n",
+    "    return mp \n",
+    "\n",
+    "\n",
+    "def mfr(t):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    \n",
+    "    t  : array of float\n",
+    "        given time \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    \n",
+    "    mfr : float\n",
+    "        mass flow rate at time t\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if t<= 5 "
+   ]
   }
  ],
  "metadata": {
