--- a/workspace/Lesson_3_3.ipynb
+++ b/workspace/Lesson_3_3.ipynb
@@ -442,34 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALQAAAAPBAMAAAC/7vi3AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAACXBIWXMAAA7EAAAOxAGVKw4bAAACm0lEQVQ4EbVTzWsTcRB922zTZpsvWhGhSEKL\nglDbpYkeRLFqLyJi0Iu3RlSEEmjQs9STIlhcPIk96FkPjQfFj4JBLx4UY1ERobT/ga2K33Z9M7Nl\nc/Dqws7sm/d7b2d/v1mgt7wFcllO5uX5KO/SgQog0BncX8HxhVLJTw28YE2LveVtgOLkvs5haGjT\nKI0z2BSInebUK3oBV4CNyx1VKEzWncuYC8OwtRmJNRpyjfMIswEU94ThGDTEGqO9BhJVuml2ni6J\ntTsPnES6afAOsBPsMYPXwGNoMdNApmk4uecgP0RCrDE63ULXKstRPiLWN2rwfjADAl8C03kf2IEH\nwFJFi7kqEquGM7JOQ6wxOtdC9hvJKKu1X0O6IQq1/gN8rAPZMUzl160LTbhrhmPrWGN0oYjsF5pE\nWay9oIbc6fKwWTufaD3GzyIErpLnmh52/dNw5jZPWUOsMfqmj87PXBRlsd6AGgqT6GGrhCmyEz6w\nS5yyspTFxAqS0hBxOp9asxBrjP6HtS/Wq+i4227trIh1d5NBXn8K56RrxXjOJ4ZYY3TBjzbEMmVd\nFVrnLsDjoBE6bJQb4lZFPyRBrL3xY3JCijES8HEkiDVG54ro0mO0TFkfaM3d8tiWuHCvp+vWn9ta\nt+ZQcK4EvwP2Lmto0yjNT/Jk+KJMr/OLi7/e8LSjruX/mcujIK5nkQrsfRxlFgTfZ8N5DW0apd0G\n+NuxAcvSJjAvs97RMJdDwFaeZBHoLMI1a+8hJgLDrF+EhlhjNC6hv+J8heb1jn4Dz9BfN9hdd+5x\nT6i+Xhp9Dy26J5zJCF8DjTTEGqPRN/4WmIHl7U9mbgG7ww9IDLCs0CkfrgCzfNFUGH6PiqNDyxFO\nDS5wQiW0aZRmF//p+gvPof8vEODjKgAAAABJRU5ErkJggg==\n",
-      "text/latex": [
-       "$$0.0146107219255619$$"
-      ],
-      "text/plain": [
-       "0.0146107219255619"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aval = A_sol[1].evalf(subs={u_star: 0.7, u_max:1.0, rho_max:10.0} )\n",
-    "aval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +457,7 @@
        "-0.0171107219255619"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,22 +469,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALQAAAAPBAMAAAC/7vi3AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAC3UlEQVQ4EbWUyWtTURTGf+9l6svQPhREqJLY\noiBYG0x1IUjjCCJicOXOiIogiMF/oAFBESyGrhSFZuFKF8aFEy6siuDCIYqKqGAW7rWOrajxu/e9\ntFVwaeCdc+453/3Od6fAvKGlmF/g475Cmdhof6FgI433gNO/ocSup4VCnrEV9wKMSdbw+h6UiK+P\nrYR9/s4WFDaWQswBFtYExXrvsaiNSbbb7Z82gnOT6lFxTnBJyabTZLgVVHrr3g0WE/lFqt0uwq32\nZ1jQcssBJtkgUgasd+689bHGVbumjVg0IOqLsIblkCHjk2oEldfwhidwk/i6reLY+0yz9pKesBjS\nTRKa2vE7pBqZCERKNoKo6g9hxM/DalJVMl+CylcY9q/D21JGs6RFX3JaJsD0NOn+plHoO9TKvNNn\nh4b6J7yvQHeR+GSH2vkhQOuw/wd1uqFpASabo1s7ROjnUE/MoXY+irqotSkHXeplgFeluq7xKT9z\nQafMq/NL6dk/pAO1mPE8sU8KQz9LHakra4dS7QmyOw9rlVMTRaYyDIeLWson0r73C24z3soeJFUJ\nMP+kzhqSv6idDybJybASLyaM6q4JjblvTLqancS9rEiYbD7ckMDPqt5ioB1qR6q1IdGySboTMrZy\nfvOwFK4wSQZrMu50T5WkFmAwPTkS9hgDP0ttpM1Qo70eqYT6ts9UdDl8ok14od1pZcq64qkyye9g\nMFpNUqfS8TPUju7EHGo1uuSTFQuJHGfCChyCI3g1HeigL1Z3UjdEqi0m2sAta0LoZ6hj0jmHehss\n00nmlNsJeh8GeLEWmyaWI1pT/hiuBJb1SNxGiDlOb8nR5Tc+5DLTEn9Sd1WcK9oTUXhHCwPVALjF\nX1DndGHVS8ZI3sDLqRl36a2EmPmbnsMoWD9wa7SONd41CbSR+3rqFc7QdjU+W9Fz0B9JNahE+h7p\n+rXbU3j9TyVnbN0SPeK+5yFGBP/p9xuqG/8ZyGVdvwAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALQAAAAPBAMAAAC/7vi3AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAACXBIWXMAAA7EAAAOxAGVKw4bAAACm0lEQVQ4EbVTzWsTcRB922zTZpsvWhGhSEKL\nglDbpYkeRLFqLyJi0Iu3RlSEEmjQs9STIlhcPIk96FkPjQfFj4JBLx4UY1ERobT/ga2K33Z9M7Nl\nc/Dqws7sm/d7b2d/v1mgt7wFcllO5uX5KO/SgQog0BncX8HxhVLJTw28YE2LveVtgOLkvs5haGjT\nKI0z2BSInebUK3oBV4CNyx1VKEzWncuYC8OwtRmJNRpyjfMIswEU94ThGDTEGqO9BhJVuml2ni6J\ntTsPnES6afAOsBPsMYPXwGNoMdNApmk4uecgP0RCrDE63ULXKstRPiLWN2rwfjADAl8C03kf2IEH\nwFJFi7kqEquGM7JOQ6wxOtdC9hvJKKu1X0O6IQq1/gN8rAPZMUzl160LTbhrhmPrWGN0oYjsF5pE\nWay9oIbc6fKwWTufaD3GzyIErpLnmh52/dNw5jZPWUOsMfqmj87PXBRlsd6AGgqT6GGrhCmyEz6w\nS5yyspTFxAqS0hBxOp9asxBrjP6HtS/Wq+i4227trIh1d5NBXn8K56RrxXjOJ4ZYY3TBjzbEMmVd\nFVrnLsDjoBE6bJQb4lZFPyRBrL3xY3JCijES8HEkiDVG54ro0mO0TFkfaM3d8tiWuHCvp+vWn9ta\nt+ZQcK4EvwP2Lmto0yjNT/Jk+KJMr/OLi7/e8LSjruX/mcujIK5nkQrsfRxlFgTfZ8N5DW0apd0G\n+NuxAcvSJjAvs97RMJdDwFaeZBHoLMI1a+8hJgLDrF+EhlhjNC6hv+J8heb1jn4Dz9BfN9hdd+5x\nT6i+Xhp9Dy26J5zJCF8DjTTEGqPRN/4WmIHl7U9mbgG7ww9IDLCs0CkfrgCzfNFUGH6PiqNDyxFO\nDS5wQiW0aZRmF//p+gvPof8vEODjKgAAAABJRU5ErkJggg==\n",
       "text/latex": [
-       "$$0.0117110721925562$$"
+       "$$0.0146107219255619$$"
       ],
       "text/plain": [
-       "0.0117110721925562"
+       "0.0146107219255619"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aval = A_sol[1].evalf(subs={u_star: 0.7, u_max:1.0, rho_max:10.0} )\n",
+    "aval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAL8AAAAPBAMAAABHDgNAAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAACXBIWXMAAA7EAAAOxAGVKw4bAAADH0lEQVQ4EbWUT2hUZxTFf2/+Zt44k9fqQuhi\nBoMFQeOQiV1ISmMbClKkg0LpRjIBoVAEH7gTxKCgCAkOLgR10WnrylKSLmzRSjsVBF1IhlAVBHEW\n0o2LJP4nsT7Pd586s3Hpgzl3vnO/8513733vwYfD63GXRYM1XwxCZlt6kFx1JMQbG+q49AY4ufEq\nfDtfrVaM9AY+r5GeHqhWpd/pDhH0aMgE4r5jbcPlLBqUKYTko2iUk2SXScBtvEucbXhtPuswE0VR\n28hM6B3H1/J/6afcIYKuhtycDPxZknWlLBpkm+TqZD7dDl+HPOcAnKIwS6FVCMjPokoKMfkLfEJC\nt9eG1GUd4qCr8a7ck8GqNtkl5SwaJFt4kzpD14OO95QRWEt/neRSXvQTKrAlJm/AoSAJyRqc2av9\nDroamcmgv03xmXIWDYovgmQzNsC1aOEftlJqkXqZWXIGUByNSXVmIdT6vn4VZ2DwVhMblMoUHytn\nMV7cW96qLpzXADXrMoXo5yZ5VbCsdZ9Vq7RI76EMRkW21OGGDAy6mtjghwrpR9pkMV4kogm1LMi9\nhF2Hldr8NCC5SMbdx0JFIH9H5qQb11r1sgYZGHQ17zT46ZuVjo7gmn7JC/jr9/0Fe9jvKpjSz1vU\nzYp8Y1ASV3EGBj0am0Gp8rpFLtrCbzPzmzRsbgj+DH7FXwnwx3ZpVImWqFQdHPmBKnAt+lKjqsnA\nQPm3mnjIZbI2ZBf7HeQD0s+4hZ750zAXymw8lKyg9u9w+r4WGKkZHFJGVa1GBgb0atxTpN2+lHG0\nhav4Dr+rgiAKmPtxUWc3xWX0QJedvtS2LhWaOnkmwNPDdPDu3ZV/DejVOIPULIm65BYN8g24ThmO\novfmROOiJt7wLzLecF8CvX7jyhn5FXwMaRWiS3sNupp4yBzjo5peJ4sGxQl895XQmefJPua/gHOk\nJrzvyR2pbppUW8rEZF/oXVD/Y4MXzkDQ1bw2WD12E6bVRhcNdg8M6ps1MB9QXLexQ3p+qAND+pfR\nZ2cSzoa6bUd6wztq2vmHO3okuhNDj2bT39NNl3uv1ytJQTTMTk4ThAAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$0.00853892780744381$$"
+      ],
+      "text/plain": [
+       "0.00853892780744381"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
