added BC still wrong solution =[11111]

--- a/workspace/module_4_assignment.ipynb
+++ b/workspace/module_4_assignment.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -53,9 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -68,18 +68,29 @@
     "\n",
     "        #discritized eq Un.\n",
     "        U[1:-1,1:-1] = Un[1:-1,1:-1]\\\n",
-    "        + Du*dt*((Un[2:,1:-1] - 2*Un[1:-1,1:-1] + Un[:-2,1:-1])/dh**2\\\n",
+    "        + dt*(Du*((Un[2:,1:-1] - 2*Un[1:-1,1:-1] + Un[:-2,1:-1])/dh**2\\\n",
     "        + (Un[1:-1,2:] - 2*Un[1:-1,1:-1] + Un[1:-1,:-2])/dh**2)\\\n",
     "        - Un[1:-1,1:-1]*Vn[1:-1,1:-1]**2 \\\n",
-    "        + F*(1- Un[1:-1,1:-1])\n",
+    "        + F*(1- Un[1:-1,1:-1]))\n",
     "\n",
     "        #discritized eq Vn.\n",
     "        V[1:-1,1:-1] = Vn[1:-1,1:-1]\\\n",
-    "        + Dv*dt*((Vn[2:,1:-1] - 2*Vn[1:-1,1:-1] + Vn[:-2,1:-1])/dh**2\\\n",
+    "        + dt*(Dv*((Vn[2:,1:-1] - 2*Vn[1:-1,1:-1] + Vn[:-2,1:-1])/dh**2\\\n",
     "        + (Vn[1:-1,2:] - 2*Vn[1:-1,1:-1] + Vn[1:-1,:-2])/dh**2)\\\n",
     "        - Un[1:-1,1:-1]*Vn[1:-1,1:-1]**2 \\\n",
-    "        - (F + k)*Vn[1:-1,1:-1]\n",
+    "        - (F + k)*Vn[1:-1,1:-1])\n",
     "    \n",
+    "        #enforce BCs\n",
+    "        U[0,:] = U[1,:]\n",
+    "        U[-1,:] = U[-2,:]\n",
+    "        U[:,0] = U[:,1]\n",
+    "        U[:,-1] = U[:,-2]\n",
+    "        \n",
+    "        V[0,:] = V[1,:]\n",
+    "        V[-1,:] = V[-2,:]\n",
+    "        V[:,0] = V[:,1]\n",
+    "        V[:,-1] = V[:,-2]\n",
+    "        \n",
     "    return U"
    ]
   },
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -118,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.0425956 ,  1.        ,  1.        ,  1.        ,  1.00000009])"
+       "array([ 1.,  1.,  1.,  1.,  1.])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,6 +140,15 @@
    "source": [
     "A[100,::40]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
