--- a/workspace/module_4_assignment.ipynb
+++ b/workspace/module_4_assignment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
     "        V[1:-1,1:-1] = Vn[1:-1,1:-1]\\\n",
     "        + dt*(Dv*((Vn[2:,1:-1] - 2*Vn[1:-1,1:-1] + Vn[:-2,1:-1])/dh**2\\\n",
     "        + (Vn[1:-1,2:] - 2*Vn[1:-1,1:-1] + Vn[1:-1,:-2])/dh**2)\\\n",
-    "        - Un[1:-1,1:-1]*Vn[1:-1,1:-1]**2 \\\n",
+    "        + Un[1:-1,1:-1]*Vn[1:-1,1:-1]**2 \\\n",
     "        - (F + k)*Vn[1:-1,1:-1])\n",
     "    \n",
     "        #enforce BCs\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -129,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  1.,  1.,  1.,  1.])"
+       "array([ 0.92469521,  0.85013834,  0.66815621,  0.90196481,  0.9039502 ])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
